BiddingManagement/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biddingmanagement
  namespace: bidding
  labels:
    app: biddingmanagement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: biddingmanagement
  template:
    metadata:
      labels:
        app: biddingmanagement
    spec:
      containers:
        - name: biddingmanagement
          image: user01skccacr.azurecr.io/biddingmanagement:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 250m
          #readinessProbe:
          #   httpGet:
          #    path: '/actuator/health'
          #    port: 8080
          #  initialDelaySeconds: 10
          #  timeoutSeconds: 2
          #  periodSeconds: 5
          #  failureThreshold: 10
          #livenessProbe:
          #  httpGet:
          #    path: '/actuator/health'
          #    port: 8080
          #  initialDelaySeconds: 120
          #  timeoutSeconds: 2
          #  periodSeconds: 5
          #  failureThreshold: 5
