BiddingManagement/kubernetes/biddingmanagement-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-biddingmanagement-network-rule
  namespace: bidding
spec:
  hosts:
  - biddingmanagement
  http:
  - route:
    - destination:
        host: biddingmanagement
    timeout: 3s
  trafficPolicy:
	  connectionPool:
			tcp:
			  maxConnections: 1
			http:
			  http1MaxPendingRequests: 1
			  maxRequestsPerConnection: 1
		  outlierDetection:
		  	consecutive5xxErrors: 1
				interval: 1s
				baseEjectionTime: 3m
				maxEjectionPercent: 100
